# gateflow

./: .clang-format  .gitignore  CMakeLists.txt  README.md  REVIEW.md  gateflow-enhancements-v3.md  gateflow-enhancements.md
.github/workflows/: deploy.yml
docs/: CURRENT_STATE.md  LL_LI.md  gateflow-spec.md
src/: CMakeLists.txt  main.cpp
src/rendering/: animation_state.cpp  animation_state.hpp  app_font.cpp  app_font.hpp  gate_renderer.cpp  gate_renderer.hpp  layout_engine.cpp  layout_engine.hpp  wire_renderer.cpp  wire_renderer.hpp
src/simulation/: circuit.cpp  circuit.hpp  circuit_builder.cpp  circuit_builder.hpp  gate.cpp  gate.hpp  nand_decompose.cpp  nand_decompose.hpp  wire.cpp  wire.hpp
src/timing/: propagation_scheduler.cpp  propagation_scheduler.hpp
src/ui/: info_panel.cpp  info_panel.hpp  input_panel.cpp  input_panel.hpp  ui_scale.cpp  ui_scale.hpp
tests/: CMakeLists.txt  test_circuit.cpp  test_circuit_builder.cpp  test_gate.cpp  test_layout_engine.cpp  test_nand_decompose.cpp  test_propagation.cpp  test_scheduler.cpp
web/: shell.html
